# CPP-codes-2021-2022

lecture_2/: CMakeLists.txt  hello_world_fmt.cpp  stdin.cpp
lecture_3/: CMakeLists.txt  auto.cpp  double_sum.cpp  literals.cpp  sizes.cpp  temp.cpp  type_operations.cpp
lecture_4/: CMakeLists.txt  for_init.cpp  funcs.cpp  hello_world_fmt.cpp  if_init.cpp  likely.cpp  switch_fall.cpp  switch_init.cpp  temp.cpp
lecture_5/: CMakeLists.txt  STL_lambda.cpp  get_sum.cpp  lambda.cpp  maybe_unused.cpp  no_discard.cpp  structured_binding.cpp  temp.cpp
lecture_5/constexpr/: STL.cpp  bench.cpp  fibs.cpp
lecture_6/: CMakeLists.txt  pointer_math.cpp  return_pointer.cpp  stack_hack.cpp  temp.cpp
lecture_7/: CMakeLists.txt  deep_recursion.cpp  double_free.cpp  memory_leak.cpp  temp.cpp
