cmake_minimum_required(VERSION 3.5.1)
project(lecture_3)

add_compile_options(-std=c++20)

add_executable(sizes sizes.cpp)
add_executable(double_sum double_sum.cpp)
add_executable(type_operations type_operations.cpp)
add_executable(literals literals.cpp)
add_executable(auto auto.cpp)



add_executable(temp temp.cpp)

